src/components/ApplicationDetailsCard/ApplicationDetailsCard.css
.adc-outline {
  color: white;
  border: solid 1px #261d2b;
  border-radius: 18px;
  min-width: 285px;
  max-width: 100%;
  max-height: 100%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.adc-wrapper {
  padding: 32px;
}
.adc-header {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.adc-header-text {
  font-family: var(--font);
  font-size: 26px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-align: left;
  color: #fff;
  padding-left: 30px;
}
.adc-header-tag {
  padding-left: 30px;
  margin-top: -20px;
}
.adc-description {
  text-align: left;
  padding-top: 20px;
  font-family: var(--font);
  font-size: 18px;
  font-weight: 400;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.33;
  letter-spacing: normal;
  text-align: left;
  color: #797f91;
  /* margin-left: 80px; */
}

